@@ -5,9 +5,10 @@ import com.metalancer.backend.common.exception.NotFoundException;
 import com.metalancer.backend.users.domain.Portfolio;
 import com.metalancer.backend.users.entity.CreatorEntity;
 import com.metalancer.backend.users.entity.PortfolioEntity;
+import com.metalancer.backend.users.entity.PortfolioImagesEntity;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
@@ -18,11 +19,21 @@ import org.springframework.stereotype.Repository;
 public class PortfolioRepositoryImpl implements PortfolioRepository {
 
     private final PortfolioJpaRepository portfolioJpaRepository;
+    private final PortfolioImagesJpaRepository portfolioImagesJpaRepository;
 
     @Override
     public List<Portfolio> findAllByCreator(CreatorEntity creatorEntity) {
-        return portfolioJpaRepository.findAllByCreatorEntity(creatorEntity).stream().map(
-            PortfolioEntity::toDomain).collect(Collectors.toList());
+        List<PortfolioEntity> portfolioEntities = portfolioJpaRepository.findAllByCreatorEntity(
+            creatorEntity);
+        List<Portfolio> response = new ArrayList<>();
+        for (PortfolioEntity portfolioEntity : portfolioEntities) {
+            Portfolio portfolio = portfolioEntity.toDomain();
+            List<String> portfolioImages = portfolioImagesJpaRepository.findAllByPortfolioEntityOrderBySeq(
+                portfolioEntity).stream().map(PortfolioImagesEntity::getImagePath).toList();
+            portfolio.setReferenceFileList(portfolioImages);
+            response.add(portfolio);
+        }
+        return response;
     }
 
     @Override
